# src/main/java/csulzc/medical_big_data_cloud/module/controller/AuthController.java
@@ -4,9 +4,9 @@ import csulzc.medical_big_data_cloud.common.result.ApiResponse;
 import csulzc.medical_big_data_cloud.module.dto.request.auth.LoginRequest;
 import csulzc.medical_big_data_cloud.module.dto.request.auth.RegisterRequest;
 import csulzc.medical_big_data_cloud.module.dto.response.auth.LoginResponse;
-import csulzc.medical_big_data_cloud.module.dto.response.user.UserResponse;
 import csulzc.medical_big_data_cloud.module.service.AuthService;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
@@ -25,10 +25,9 @@ public class AuthController {
     }
 
     @PostMapping("/register")
-    public ApiResponse<LoginResponse> register(@Valid @RequestBody RegisterRequest request) {
-        return ApiResponse.success(authService.register(request));
+    public ApiResponse<LoginResponse> register(@Valid @RequestBody RegisterRequest request, HttpServletRequest httpRequest) {
+        return ApiResponse.success(authService.register(request, httpRequest));
     }
-
 
     @GetMapping("/me")
     public ApiResponse<LoginResponse.UserInfo> getCurrentUser() {
